--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3566,6 +3566,46 @@ font-style: italic;
 
 }
 
+.article-card {
+  border: 1px solid #ffffff;
+  background-color: #949fb0;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  margin-bottom: 10px;
+  transition: transform 0.2s;
+}
+
+.article-card:hover {
+  transform: translateY(-10px);
+}
+
+.tt {
+  margin-bottom: 50px;
+}
+
+
+.article-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: cover;
+}
+
+.article-card-body {
+  padding: 15px;
+}
+
+.article-card-title {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.article-card-text {
+  color: #ffffff;
+  margin-bottom: 15px;
+}
+
 
 
 header.masthead .h1, header.masthead h1 {
